--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ docformatter
 pre-commit
 pydocstyle==6.1.1
 transformers>=4.10.0
-pandas>=2.0.3
+pandas==1.3.1
 torch>=1.9.0
 numpy==1.21.2
+statsmodels>=0.12.2
